<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_dilemma"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"/>
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dilemma_title"/>

            <EditText
                android:id="@+id/enter_dilemma_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_title"
                /> </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/positive_title"

                />
            <EditText
                android:id="@+id/positive_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/positive_emotion"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/negative_title"/>

            <EditText
                android:id="@+id/negative_emotion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/negative_emotion"
                />


        </LinearLayout>

        <Button android:id="@+id/dilemma_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>



        <CheckBox android:id="@+id/dilemma_solved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/dilemma_solved_label"
            />




    </LinearLayout>

</LinearLayout>