<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/warning_text"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button2"/>
        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button"/>


    </LinearLayout>


</LinearLayout>