<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="50dp"
    android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/titleview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:textSize="20dp"
        android:text="@string/warning_text"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >

        <Button
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button2"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>
        <Button
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_answer_button"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="30dp"
            android:paddingBottom="30dp"/>


    </LinearLayout>

    <Button android:id="@+id/dilemma_date2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <CheckBox android:id="@+id/list_item_dilemma_solved_check_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/dilemma_solved_label"
        />
</LinearLayout>